--- a/style/style.css
+++ b/style/style.css
@@ -210,8 +210,9 @@ main .second form {
 
 main .second form label {
   text-transform: uppercase;
-  font-size: 0.7em;
+  font-size: 0.65em;
   margin-bottom: 5px;
+  letter-spacing: 1.3px;
 }
 
 main .second form input {
