--- a/style/style.scss
+++ b/style/style.scss
@@ -97,8 +97,9 @@ main {
 
       label {
         text-transform: uppercase;
-        font-size: 0.7em;
+        font-size: 0.65em;
         margin-bottom: 5px;
+        letter-spacing: 1.3px;
       }
 
       input {
