--- a/style/style.scss
+++ b/style/style.scss
@@ -422,7 +422,7 @@ main {
   main {
     .first {
       .cards {
-        width: 55%;
+        width: 60%;
 
         .card {
           height: 10.4em;
@@ -445,6 +445,7 @@ main {
       align-items: flex-start;
       form {
         width: 70%;
+        margin-bottom: 50px;
       }
     }
   }
@@ -454,7 +455,7 @@ main {
   main {
     .first {
       .cards {
-        width: 70%;
+        width: 75%;
 
         .card {
           height: 9.7em;
