complied to HTML validation standards

--- a/style/style.css
+++ b/style/style.css
@@ -5,8 +5,7 @@
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /*
@@ -84,52 +83,32 @@ body {
 }
 
 main {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 2fr 5fr;
-      grid-template-columns: 2fr 5fr;
+  grid-template-columns: 2fr 5fr;
   height: 100vh;
   background: #fff;
 }
-
 main .first {
   background: url("../images/bg-main-desktop.png") center center no-repeat;
   background-size: cover;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
 main .first .cards {
   width: 100%;
   color: #fff;
 }
-
 main .first .cards .card {
   padding: 10px;
   border-radius: 10px;
   height: 13em;
-  -webkit-box-shadow: rgba(73, 66, 66, 0.2) 5px 20px 30px 8px;
-          box-shadow: rgba(73, 66, 66, 0.2) 5px 20px 30px 8px;
+  box-shadow: rgba(73, 66, 66, 0.2) 5px 20px 30px 8px;
 }
-
 main .first .cards .front {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-between;
   position: relative;
   left: 30%;
   margin-bottom: 30px;
@@ -137,146 +116,95 @@ main .first .cards .front {
   background: url(../images/bg-card-front.png) center center no-repeat;
   background-size: cover;
 }
-
 main .first .cards .front .logo {
   height: 35px;
 }
-
 main .first .cards .front .logo img {
   height: 100%;
   -o-object-fit: contain;
      object-fit: contain;
 }
-
 main .first .cards .front .info .number {
   font-size: 1.42em;
   word-spacing: 5px;
   margin-bottom: 18px;
 }
-
 main .first .cards .front .info .last-info {
   font-size: 0.8em;
   text-transform: uppercase;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 main .first .cards .back {
   background: url(../images/bg-card-back.png) center center no-repeat;
   background-size: cover;
   position: relative;
   left: 50%;
 }
-
 main .first .cards .back .cvv {
   height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
   margin-right: 30px;
   font-size: 0.8em;
 }
-
 main .second {
   font-size: 18px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
-
-main .second form {
+main .second .form {
   width: 35%;
 }
-
-main .second form label {
+main .second .form label {
   text-transform: uppercase;
   font-size: 0.65em;
   margin-bottom: 5px;
   letter-spacing: 1.3px;
 }
-
-main .second form input {
+main .second .form input {
   border-radius: 5px;
   padding: 7px 10px;
-  border: 1px solid #dedddf;
+  border: 1px solid hsl(270deg, 3%, 87%);
   font-size: 0.85em;
 }
-
-main .second form input::-webkit-input-placeholder {
-  color: #8e8593;
+main .second .form input::-moz-placeholder {
+  color: hsl(279deg, 6%, 55%);
 }
-
-main .second form input:-ms-input-placeholder {
-  color: #8e8593;
+main .second .form input:-ms-input-placeholder {
+  color: hsl(279deg, 6%, 55%);
 }
-
-main .second form input::-ms-input-placeholder {
-  color: #8e8593;
+main .second .form input::placeholder {
+  color: hsl(279deg, 6%, 55%);
 }
-
-main .second form input::placeholder {
-  color: #8e8593;
-}
-
-main .second form .field {
-  display: -webkit-box;
-  display: -ms-flexbox;
+main .second .form .field {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   padding-bottom: 25px;
 }
-
-main .second form .field.bottom {
+main .second .form .field.bottom {
   padding-bottom: 12px;
 }
-
-main .second form .more {
-  display: -webkit-box;
-  display: -ms-flexbox;
+main .second .form .more {
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   margin-bottom: 35px;
   margin-top: 5px;
 }
-
-main .second form .more .expiry input {
+main .second .form .more .expiry input {
   width: 4.5em;
   margin-right: 4px;
   margin-top: 3px;
 }
-
-main .second form .more .cvv input {
+main .second .form .more .cvv input {
   margin-top: 3px;
   width: 10.5em;
 }
-
-main .second form button {
-  background: #21092f;
+main .second .form button {
+  background: hsl(278deg, 68%, 11%);
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -284,70 +212,56 @@ main .second form button {
   width: 100%;
   font-size: 16px;
 }
-
-main .second form button:hover {
+main .second .form button:hover {
   cursor: pointer;
 }
-
 main .second .show {
   display: none;
 }
-
 @media screen and (max-width: 1272px) {
   main .second form {
     width: 38%;
   }
 }
-
 main .second .thank-you {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
 }
-
 main .second .thank-you .img {
   height: 60px;
   margin-bottom: 15px;
 }
-
 main .second .thank-you .img img {
   height: 100%;
   -o-object-fit: contain;
      object-fit: contain;
 }
-
 main .second .thank-you .bg {
   text-transform: uppercase;
   font-size: 1.2em;
   margin-bottom: 10px;
 }
-
 main .second .thank-you .subtitle {
   font-size: 0.8em;
-  color: #8e8593;
+  color: hsl(279deg, 6%, 55%);
   margin-bottom: 30px;
 }
-
 main .second .thank-you button {
-  background: #21092f;
+  background: hsl(278deg, 68%, 11%);
   color: #fff;
   border: none;
   border-radius: 5px;
   padding: 12px 7em;
   font-size: 16px;
 }
-
+main .second .thank-you button a {
+  text-decoration: none;
+  color: #fff;
+}
 main .second .thank-you button:hover {
   cursor: pointer;
 }
-
 main .second .thank-you.show {
   display: none;
 }
@@ -358,53 +272,44 @@ main .second .thank-you.show {
     margin: auto;
   }
 }
-
 @media screen and (min-width: 1800px) {
   main {
     width: 70%;
     margin: auto;
   }
 }
-
 @media screen and (min-width: 2000px) {
   main {
     width: 65%;
     margin: auto;
   }
 }
-
 @media screen and (min-width: 1350px) {
   main .first .cards .card {
     height: 13.5em;
   }
 }
-
 @media screen and (max-width: 1176px) {
   main {
-    -ms-grid-columns: 2.5fr 5.5fr;
-        grid-template-columns: 2.5fr 5.5fr;
+    grid-template-columns: 2.5fr 5.5fr;
   }
   main .second form {
     width: 55%;
     padding-left: 5em;
   }
 }
-
 @media screen and (max-width: 1075px) {
   main {
-    -ms-grid-columns: 3fr 6fr;
-        grid-template-columns: 3fr 6fr;
+    grid-template-columns: 3fr 6fr;
   }
   main .second form {
     width: 65%;
     padding-left: 6em;
   }
 }
-
 @media screen and (max-width: 1008px) {
   main {
-    -ms-grid-columns: 3fr 5.5fr;
-        grid-template-columns: 3fr 5.5fr;
+    grid-template-columns: 3fr 5.5fr;
   }
   main .first .cards .front {
     left: 20%;
@@ -417,11 +322,9 @@ main .second .thank-you.show {
     padding-left: 7em;
   }
 }
-
 @media screen and (max-width: 952px) {
   main {
-    -ms-grid-columns: 3fr 5.5fr;
-        grid-template-columns: 3fr 5.5fr;
+    grid-template-columns: 3fr 5.5fr;
   }
   main .first .cards .card {
     height: 12em;
@@ -441,40 +344,27 @@ main .second .thank-you.show {
     width: 10em;
   }
 }
-
 @media screen and (max-width: 900px) {
   body {
     background: #fff;
   }
   main {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
     height: auto;
   }
   main .first {
     background: url("../images/bg-main-mobile.png") center center no-repeat;
     background-size: cover;
     height: 40vh;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: flex-start;
+    align-items: center;
   }
   main .first .cards {
     width: 45%;
     margin: auto;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    flex-direction: column;
+    justify-content: flex-start;
     position: relative;
     top: 30px;
   }
@@ -482,9 +372,7 @@ main .second .thank-you.show {
     height: 12em;
   }
   main .first .cards .front {
-    -webkit-box-ordinal-group: 4;
-        -ms-flex-order: 3;
-            order: 3;
+    order: 3;
     z-index: 20;
     top: -13vh;
     position: relative;
@@ -503,7 +391,6 @@ main .second .thank-you.show {
     padding: 0;
   }
 }
-
 @media screen and (max-width: 705px) {
   main {
     grid-gap: 0px;
@@ -515,7 +402,6 @@ main .second .thank-you.show {
     width: 50%;
   }
 }
-
 @media screen and (max-width: 577px) {
   main .first .cards {
     width: 60%;
@@ -532,16 +418,13 @@ main .second .thank-you.show {
     font-size: 1.1em;
   }
   main .second {
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    align-items: flex-start;
   }
   main .second form {
     width: 70%;
     margin-bottom: 50px;
   }
 }
-
 @media screen and (max-width: 469px) {
   main .first .cards {
     width: 75%;
@@ -552,5 +435,4 @@ main .second .thank-you.show {
   main .second form {
     width: 80%;
   }
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
