--- a/style/style.scss
+++ b/style/style.scss
@@ -92,7 +92,7 @@ main {
     justify-content: center;
     align-items: center;
 
-    form {
+    .form {
       width: 35%;
 
       label {
@@ -204,6 +204,11 @@ main {
         border-radius: 5px;
         padding: 12px 7em;
         font-size: 16px;
+
+        a {
+          text-decoration: none;
+          color: #fff;
+        }
       }
 
       button:hover {
